hphp/hack/test/typecheck/new_inference/eager_solve/ref_get_array_append.php.like_types.exp
File "ref_get_array_append.php", line 27, characters 19-29:
Invalid argument (Typing[4110])
File "ref_get_array_append.php", line 57, characters 19-19:
Some type constraint(s) are violated here
File "ref_get_array_append.php", line 57, characters 19-19:
T is a constrained type parameter
File "ref_get_array_append.php", line 9, characters 27-35:
Expected Vector<[unresolved]>
File "ref_get_array_append.php", line 57, characters 19-19:
But got dynamic
File "ref_get_array_append.php", line 52, characters 30-40:
Invalid argument (Typing[4110])
File "ref_get_array_append.php", line 57, characters 19-19:
Some type constraint(s) are violated here
File "ref_get_array_append.php", line 57, characters 19-19:
T is a constrained type parameter
File "ref_get_array_append.php", line 5, characters 24-29:
Expected vec<[unresolved]>
File "ref_get_array_append.php", line 57, characters 19-19:
But got dynamic
